# User-Analytics_Semantic-Search-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  main.py
app/db/: init_db.py  models.py  session.py
app/routers/: analytics.py  search.py  similar_users.py  track.py
app/schemas/: events.py
app/services/: analytics.py  embeddings.py  search.py  vector_store.py
scripts/: seed.py
tests/: conftest.py  test_analytics.py  test_search.py  test_track.py
