[project]
name = "analytics-search-backend"
version = "0.1.0"
description = "User analytics + semantic search backend (FastAPI + Postgres + ChromaDB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "chromadb>=0.5.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
